fixing navbarBtn ids & sidebar overflow

--- a/Loqui/client/main.css
+++ b/Loqui/client/main.css
@@ -31,6 +31,7 @@ body{
 	width: 20%;
 	height: 100vh;
 	float: left;
+	overflow: scroll;
 }
 
 /*--------END sideBar--------------*/
@@ -93,6 +94,10 @@ body{
 	}
 	/* END CAN BE DELETED*/
 
+	#calendarsToggleBtn{
+		display: none;
+	}
+
 	#sideBar{
 		width: 20%;
 	}
@@ -111,6 +116,10 @@ body{
 	}
 	/* END CAN BE DELETED*/
 
+	#calendarsToggleBtn{
+		display: none;
+	}
+
 	#sideBar{
 		width: 17.5%;
 	}
@@ -127,6 +136,10 @@ body{
 		background-color: green;
 	}
 	/* END CAN BE DELETED*/
+
+	#calendarsToggleBtn{
+		display: none;
+	}
 
 	#sideBar{
 		width: 15%;
